Dodati privacy policy i terms and conditions
U footeru dodati privacy policy i terms and conditions zbog AdSense-a.

--- a/html/oAutoru.html
+++ b/html/oAutoru.html
@@ -57,11 +57,11 @@
 
 	<a class="top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
 
-<footer>
-
-	<p class="pfuter">Vlada Palijan 78/20 &copy; 2022 <a  href="../css/style.css" target="_blank"><i class="fa-solid fa-file-code css"></i></a></p>
-
-</footer>
+	<footer class="futer3">
+	
+		<p class="pfuter">Vlada Palijan 78/20 &copy; 2022 <a  href="../css/style.css" target="_blank"><i class="fa-solid fa-file-code css"></i></a><a class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=j83oGemZQ0CL3K5IxSAysOuy45rxjxwZ" target="_blank">Privacy Policy</a><a class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=K9XR7K4cYvvI5uHpM0b6s0n2PuUICUJL" target="_blank">Terms And Conditions</a></p>
+	
+	</footer>
 
 
 </body>
