Prebacen css u html folder

--- a/html/indijska.html
+++ b/html/indijska.html
@@ -3,7 +3,7 @@
 	<title> Indijska kuhinja </title>
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="../img/icon.png" />
-	<link rel="stylesheet" type="text/css" href="../css/style.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="https://kit.fontawesome.com/e9790c3481.js" crossorigin="anonymous"></script>
 
 </head>
@@ -103,10 +103,9 @@
 
 		<footer class="futer3">
 	
-			<p class="pfuter">Vlada Palijan 78/20 &copy; 2022 <a  href="../css/style.css" target="_blank"><i class="fa-solid fa-file-code css"></i></a><a class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=fQCVfOZWn5m5lWaNeKeY6jXtDLGRSs9l" target="_blank">Privacy Policy</a><a class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=deKl7ROoWFNpjvDP40g3vK5rjpyLCX0Z" target="_blank">Terms And Conditions</a></p>
+			<p class="pfuter">Vlada Palijan 78/20 &copy; 2022 <a  href="style.css" target="_blank"><i class="fa-solid fa-file-code css"></i></a><a class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=fQCVfOZWn5m5lWaNeKeY6jXtDLGRSs9l" target="_blank">Privacy Policy</a><a class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=deKl7ROoWFNpjvDP40g3vK5rjpyLCX0Z" target="_blank">Terms And Conditions</a></p>		
 		
 		</footer>
-
 
 </body>
 </html>
