--- a/galerija.html
+++ b/galerija.html
@@ -5,7 +5,8 @@
 	<link rel="shortcut icon" href="icon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="https://kit.fontawesome.com/e9790c3481.js" crossorigin="anonymous"></script>
-
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3318859286376672"
+	crossorigin="anonymous"></script>
 </head>
 <body>
 		
