Ocisceni i ispravljeni svi html fajlovi i css

--- a/kineska.html
+++ b/kineska.html
@@ -14,27 +14,27 @@
 	<nav class="meni">
 		<div class="header">
 		<div class="logo">
-				<a href="index.html"><p id="p1"> RECEPTI  </p>
+				<a title="Logo" href="index.html"><p id="p1"> RECEPTI  </p>
 				<p class="razmak1"><i class="fa-solid fa-burger razmak"></i></p></a>
 				
 		</div>
 		
 		<ul>
 			
-            <li><a href="index.html">NASLOVNA</a></li>
-			<li><a class="active" href="#">KUHINJE&dtrif;</a>
+            <li><a title="Naslovna strana" href="index.html">NASLOVNA</a></li>
+			<li><a title="Razlicite kuhinje" class="active" href="#">KUHINJE&dtrif;</a>
 				<ul>
-					<li><a href="americka.html">Američka</a></li>
-					<li><a href="italijanska.html">Italijanska</a></li>
-					<li><a class="active" href="kineska.html">Kineska</a></li>
-					<li><a href="grcka.html">Grčka</a></li>
-					<li><a href="meksicka.html">Meksička</a></li>
-					<li><a href="indijska.html">Indijska</a></li>
+					<li><a title="Americka kuhinja" href="americka.html">Američka</a></li>
+					<li><a title="Italijanska kuhinja" href="italijanska.html">Italijanska</a></li>
+					<li><a title="Kineska kuhinja" class="active" href="kineska.html">Kineska</a></li>
+					<li><a title="Grcka kuhinja" href="grcka.html">Grčka</a></li>
+					<li><a title="Meksicka kuhinja" href="meksicka.html">Meksička</a></li>
+					<li><a title="Indijska kuhinja" href="indijska.html">Indijska</a></li>
 				</ul>
 			</li>
-            <li><a href="galerija.html">GALERIJA</a></li>
-            <li><a href="kontakt.html">KONTAKT</a></li>
-            <li><a href="oAutoru.html">O AUTORU</a></li>
+            <li><a title="Galerija" href="galerija.html">GALERIJA</a></li>
+            <li><a title="Kontakt" href="kontakt.html">KONTAKT</a></li>
+            <li><a title="O autoru" href="oAutoru.html">O AUTORU</a></li>
         </ul>
 	
 	</nav>
@@ -98,14 +98,13 @@
 		  <li>Služite uz pirinač.</li>
 		</ul>
 
-		<a class="top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
+		<a title="Povratak na pocetak" class="top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
 
 		<footer class="futer3">
-	
-			<p class="pfuter">Vlada Palijan 78/20 &copy; 2022 <a  href="style.css" target="_blank"><i class="fa-solid fa-file-code css"></i></a><a class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=fQCVfOZWn5m5lWaNeKeY6jXtDLGRSs9l" target="_blank">Privacy Policy</a><a class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=deKl7ROoWFNpjvDP40g3vK5rjpyLCX0Z" target="_blank">Terms And Conditions</a></p>		
+
+			<p class="pfuter"><a title="Privacy Policy" class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=fQCVfOZWn5m5lWaNeKeY6jXtDLGRSs9l" target="_blank">Privacy Policy</a> Vlada Palijan &copy; 2022 <a title="Terms And Conditions" class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=deKl7ROoWFNpjvDP40g3vK5rjpyLCX0Z" target="_blank">Terms And Conditions</a></p>
 		
 		</footer>
-
 
 </body>
 </html>
