--- a/galerija.html
+++ b/galerija.html
@@ -13,27 +13,27 @@
 	<nav class="meni">
 		<div class="header">
 		<div class="logo">
-				<a href="index.html"><p id="p1"> RECEPTI  </p>
+				<a title="Logo" href="index.html"><p id="p1"> RECEPTI  </p>
 				<p class="razmak1"><i class="fa-solid fa-burger razmak"></i></p></a>
 				
 		</div>
 		
 		<ul>
 			
-            <li><a href="index.html">NASLOVNA</a></li>
-			<li><a href="#">KUHINJE&dtrif;</a>
+            <li><a title="Naslovna strana" href="index.html">NASLOVNA</a></li>
+			<li><a title="Razlicite kuhinje" href="#">KUHINJE&dtrif;</a>
 				<ul>
-					<li><a href="americka.html">Američka</a></li>
-					<li><a href="italijanska.html">Italijanska</a></li>
-					<li><a href="kineska.html">Kineska</a></li>
-					<li><a href="grcka.html">Grčka</a></li>
-					<li><a href="meksicka.html">Meksička</a></li>
-					<li><a href="indijska.html">Indijska</a></li>
+					<li><a title="Americka kuhinja" href="americka.html">Američka</a></li>
+					<li><a title="Italijanska kuhinja" href="italijanska.html">Italijanska</a></li>
+					<li><a title="Kineska kuhinja" href="kineska.html">Kineska</a></li>
+					<li><a title="Grcka kuhinja" href="grcka.html">Grčka</a></li>
+					<li><a title="Meksicka kuhinja" href="meksicka.html">Meksička</a></li>
+					<li><a title="Indijska kuhinja" href="indijska.html">Indijska</a></li>
 				</ul>
 			</li>
-            <li><a class="active" href="galerija.html">GALERIJA</a></li>
-            <li><a class href="kontakt.html">KONTAKT</a></li>
-            <li><a class href="oAutoru.html">O AUTORU</a></li>
+            <li><a title="Galerija" class="active" href="galerija.html">GALERIJA</a></li>
+            <li><a title="Kontakt" class href="kontakt.html">KONTAKT</a></li>
+            <li><a title="O autoru" class href="oAutoru.html">O AUTORU</a></li>
         </ul>
 	
 	</nav>
@@ -41,31 +41,31 @@
 <h1 class="naslov">GALERIJA</h1>
 <div class="galerija">
 
-	<a href="slika1.jpg" alt="Slika1 Velika"><img src="slika1Mala.jpg" alt="Slika1 Mala"/></a>
-	<a href="slika2.jpg" alt="Slika2 Velika"><img src="slika2Mala.jpg" alt="Slika2 Mala"/></a>
-	<a href="slika3.jpg" alt="Slika3 Velika"><img src="slika3Mala.jpg" alt="Slika3 Mala"/></a>
-	<a href="slika4.jpg" alt="Slika4 Velika"><img src="slika4Mala.jpg" alt="Slika4 Mala"/></a>
-	<a href="slika5.jpg" alt="Slika5 Velika"><img src="slika5Mala.jpg" alt="Slika5 Mala"/></a>
-	<a href="slika6.jpg" alt="Slika6 Velika"><img src="slika6Mala.jpg" alt="Slika6 Mala"/></a>
-	<a href="slika7.jpg" alt="Slika7 Velika"><img src="slika7Mala.jpg" alt="Slika7 Mala"/></a>
-	<a href="slika8.jpg" alt="Slika8 Velika"><img src="slika8Mala.jpg" alt="Slika8 Mala"/></a>
-	<a href="slika9.jpg" alt="Slika9 Velika"><img src="slika9Mala.jpg" alt="Slika9 Mala"/></a>
-	<a href="slika10.jpg" alt="Slika10 Velika"><img src="slika10Mala.jpg" alt="Slika10 Mala"/></a>
-	<a href="slika11.jpg" alt="Slika11 Velika"><img src="slika11Mala.jpg" alt="Slika11 Mala"/></a>
-	<a href="slika12.jpg" alt="Slika12 Velika"><img src="slika12Mala.jpg" alt="Slika12 Mala"/></a>
-	<a href="slika13.jpg" alt="Slika13 Velika"><img src="slika13Mala.jpg" alt="Slika13 Mala"/></a>
-	<a href="slika14.jpg" alt="Slika14 Velika"><img src="slika14Mala.jpg" alt="Slika14 Mala"/></a>
-	<a href="slika15.jpg" alt="Slika15 Velika"><img src="slika15Mala.jpg" alt="Slika15 Mala"/></a>
+	<a title="Slika1" href="slika1.jpg" alt="Slika1 Velika"><img src="slika1Mala.jpg" alt="Slika1 Mala"/></a>
+	<a title="Slika2" href="slika2.jpg" alt="Slika2 Velika"><img src="slika2Mala.jpg" alt="Slika2 Mala"/></a>
+	<a title="Slika3" href="slika3.jpg" alt="Slika3 Velika"><img src="slika3Mala.jpg" alt="Slika3 Mala"/></a>
+	<a title="Slika4" href="slika4.jpg" alt="Slika4 Velika"><img src="slika4Mala.jpg" alt="Slika4 Mala"/></a>
+	<a title="Slika5" href="slika5.jpg" alt="Slika5 Velika"><img src="slika5Mala.jpg" alt="Slika5 Mala"/></a>
+	<a title="Slika6" href="slika6.jpg" alt="Slika6 Velika"><img src="slika6Mala.jpg" alt="Slika6 Mala"/></a>
+	<a title="Slika7" href="slika7.jpg" alt="Slika7 Velika"><img src="slika7Mala.jpg" alt="Slika7 Mala"/></a>
+	<a title="Slika8" href="slika8.jpg" alt="Slika8 Velika"><img src="slika8Mala.jpg" alt="Slika8 Mala"/></a>
+	<a title="Slika9" href="slika9.jpg" alt="Slika9 Velika"><img src="slika9Mala.jpg" alt="Slika9 Mala"/></a>
+	<a title="Slika10" href="slika10.jpg" alt="Slika10 Velika"><img src="slika10Mala.jpg" alt="Slika10 Mala"/></a>
+	<a title="Slika11" href="slika11.jpg" alt="Slika11 Velika"><img src="slika11Mala.jpg" alt="Slika11 Mala"/></a>
+	<a title="Slika12" href="slika12.jpg" alt="Slika12 Velika"><img src="slika12Mala.jpg" alt="Slika12 Mala"/></a>
+	<a title="Slika13" href="slika13.jpg" alt="Slika13 Velika"><img src="slika13Mala.jpg" alt="Slika13 Mala"/></a>
+	<a title="Slika14" href="slika14.jpg" alt="Slika14 Velika"><img src="slika14Mala.jpg" alt="Slika14 Mala"/></a>
+	<a title="Slika15" href="slika15.jpg" alt="Slika15 Velika"><img src="slika15Mala.jpg" alt="Slika15 Mala"/></a>
 
 </div>
 
 
 
-<a class="top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
+<a title="Povratak na pocetak" class="top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
 
 <footer class="futer3">
-	
-	<p class="pfuter">Vlada Palijan 78/20 &copy; 2022 <a  href="style.css" target="_blank"><i class="fa-solid fa-file-code css"></i></a><a class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=fQCVfOZWn5m5lWaNeKeY6jXtDLGRSs9l" target="_blank">Privacy Policy</a><a class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=deKl7ROoWFNpjvDP40g3vK5rjpyLCX0Z" target="_blank">Terms And Conditions</a></p>		
+
+	<p class="pfuter"><a title="Privacy Policy" class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=fQCVfOZWn5m5lWaNeKeY6jXtDLGRSs9l" target="_blank">Privacy Policy</a> Vlada Palijan &copy; 2022 <a title="Terms And Conditions" class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=deKl7ROoWFNpjvDP40g3vK5rjpyLCX0Z" target="_blank">Terms And Conditions</a></p>
 
 </footer>
 
