--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
 	<nav class="meni">
 		<div class="header">
 		<div class="logo">
-				<a href="index.html"><p id="p1"> RECEPTI  </p>
+				<a title="Logo" href="index.html"><p id="p1"> RECEPTI  </p>
 				<p class="razmak1"><i class="fa-solid fa-burger razmak"></i></p></a>
 		</div>
 		
 		<ul>
 			
-            <li><a class="active" href="index.html">NASLOVNA</a></li>
-			<li><a href="#">KUHINJE&dtrif;</a>
+            <li><a title="Naslovna strana" class="active" href="index.html">NASLOVNA</a></li>
+			<li><a title="Razlicite kuhinje" href="#">KUHINJE&dtrif;</a>
 				<ul>
-					<li><a href="americka.html">Američka</a></li>
-					<li><a href="italijanska.html">Italijanska</a></li>
-					<li><a href="kineska.html">Kineska</a></li>
-					<li><a href="grcka.html">Grčka</a></li>
-					<li><a href="meksicka.html">Meksička</a></li>
-					<li><a href="indijska.html">Indijska</a></li>
+					<li><a title="Americka kuhinja" href="americka.html">Američka</a></li>
+					<li><a title="Italijanska kuhinja" href="italijanska.html">Italijanska</a></li>
+					<li><a title="Kineska kuhinja" href="kineska.html">Kineska</a></li>
+					<li><a title="Grcka kuhinja" href="grcka.html">Grčka</a></li>
+					<li><a title="Meksicka kuhinja" href="meksicka.html">Meksička</a></li>
+					<li><a title="Indijska kuhinja" href="indijska.html">Indijska</a></li>
 				</ul>
 			</li>
-            <li><a href="galerija.html">GALERIJA</a></li>
-            <li><a href="kontakt.html">KONTAKT</a></li>
-            <li><a href="oAutoru.html">O AUTORU</a></li>
+            <li><a title="Galerija" href="galerija.html">GALERIJA</a></li>
+            <li><a title="Kontakt" href="kontakt.html">KONTAKT</a></li>
+            <li><a title="O autoru" href="oAutoru.html">O AUTORU</a></li>
         </ul>
 	
 	</nav>
@@ -44,12 +44,12 @@
 
 			<div class="leva">
 				
-				<a href="americka.html"><span class="tekst">AMERIČKA KUHINJA</span><img src="americka.jpg" alt="americka kuhinja" width="120%"></a>
+				<a title="Americka kuhinja" href="americka.html"><span class="tekst">AMERIČKA KUHINJA</span><img src="americka.jpg" alt="americka kuhinja" width="120%"></a>
 			<div class="PrekoSlika"></div>
 			</div>
 			<div class="leva desna">
 			
-				<a href="italijanska.html"><span class="tekst">ITALIJANSKA KUHINJA</span><img src="italijanska.jpg" alt="italijanska kuhinja" width="120%"></a>
+				<a title="Italijanska kuhinja" href="italijanska.html"><span class="tekst">ITALIJANSKA KUHINJA</span><img src="italijanska.jpg" alt="italijanska kuhinja" width="120%"></a>
 				<div class="prekoSlika"></div>
 			</div>
 		
@@ -60,12 +60,12 @@
 		
 		<div class="leva">
 			
-			<a href="kineska.html"><span class="tekst">KINESKA KUHINJA</span><img src="kineska.jpg" alt="kineska kuhinja" width="120%"></a>
+			<a title="Kineska kuhinja" href="kineska.html"><span class="tekst">KINESKA KUHINJA</span><img src="kineska.jpg" alt="kineska kuhinja" width="120%"></a>
 
 		</div>
 		<div class="leva desna">
 			
-			<a href="grcka.html"><span class="tekst">GRČKA KUHINJA</span><img src="grcka.jpg" alt="grcka kuhinja" width="120%"></a>
+			<a title="Grcka kuhinja" href="grcka.html"><span class="tekst">GRČKA KUHINJA</span><img src="grcka.jpg" alt="grcka kuhinja" width="120%"></a>
 		
 		</div>
 
@@ -75,12 +75,12 @@
 		
 		<div class="leva"> 
 		
-			<a href="meksicka.html"><span class="tekst">MEKSIČKA KUHINJA</span><img src="meksicka.jpg" alt="meksicka kuhinja" width="120%"></a>
+			<a title="Meksicka kuhinja" href="meksicka.html"><span class="tekst">MEKSIČKA KUHINJA</span><img src="meksicka.jpg" alt="meksicka kuhinja" width="120%"></a>
 
 		</div>
 		<div class="leva desna">
 			
-			<a href="indijska.html"><span class="tekst">INDIJSKA KUHINJA</span><img src="indijska.jpg" alt="indijska kuhinja" width="120%"></a>
+			<a title="Indijska kuhinja" href="indijska.html"><span class="tekst">INDIJSKA KUHINJA</span><img src="indijska.jpg" alt="indijska kuhinja" width="120%"></a>
 		
 		</div>
 
@@ -88,11 +88,11 @@
 	<div class="break"></div>	
 </div>
 
-	<a class="top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
+	<a title="Povratak na pocetak" class="top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
 
 	<footer class="futer3">
-	
-		<p class="pfuter">Vlada Palijan 78/20 &copy; 2022 <a  href="style.css" target="_blank"><i class="fa-solid fa-file-code css"></i></a><a class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=fQCVfOZWn5m5lWaNeKeY6jXtDLGRSs9l" target="_blank">Privacy Policy</a><a class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=deKl7ROoWFNpjvDP40g3vK5rjpyLCX0Z" target="_blank">Terms And Conditions</a></p>
+
+		<p class="pfuter"><a title="Privacy Policy" class="zagoogle" href="https://www.privacypolicygenerator.info/live.php?token=fQCVfOZWn5m5lWaNeKeY6jXtDLGRSs9l" target="_blank">Privacy Policy</a> Vlada Palijan &copy; 2022 <a title="Terms And Conditions" class="zagoogle" href="https://www.termsandconditionsgenerator.com/live.php?token=deKl7ROoWFNpjvDP40g3vK5rjpyLCX0Z" target="_blank">Terms And Conditions</a></p>
 	
 	</footer>
 	
