--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
-	<title> Recepti </title>
+	<title> Najbolji recepti iz 6 svetskih kuhinja </title>
 	<meta charset="utf-8" />
+	<meta name="description" content="Na ovom sajtu ce te naci 6 razlicitih kuhinja sa njihovim najboljim i najukusnijim receptima.">
+	<meta name="keywords" content="Recepti, Kuvanje, Cooking, Recipes">
 	<link rel="shortcut icon" href="icon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="https://kit.fontawesome.com/e9790c3481.js" crossorigin="anonymous"></script>
