Optimizacije za telefon 1 deo

--- a/indijska.html
+++ b/indijska.html
@@ -2,6 +2,7 @@
 <head>
 	<title> Indijska kuhinja </title>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="icon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="https://kit.fontawesome.com/e9790c3481.js" crossorigin="anonymous"></script>
