--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title> Najbolji recepti iz 6 svetskih kuhinja </title>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Na ovom sajtu ce te naci 6 razlicitih kuhinja sa njihovim najboljim i najukusnijim receptima.">
 	<meta name="keywords" content="Recepti, Kuvanje, Cooking, Recipes">
 	<link rel="shortcut icon" href="icon.png" />
