--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Na ovom sajtu ce te naci 6 razlicitih kuhinja sa njihovim najboljim i najukusnijim receptima.">
 	<meta name="keywords" content="Recepti, Kuvanje, Cooking, Recipes">
 	<link rel="shortcut icon" href="icon.png" />
+	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="https://kit.fontawesome.com/e9790c3481.js" crossorigin="anonymous"></script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3318859286376672"
