--- a/indijska.html
+++ b/indijska.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="icon.png" />
+	<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="https://kit.fontawesome.com/e9790c3481.js" crossorigin="anonymous"></script>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3318859286376672"
