Dodato jos socijalnih linkova i izmenjeni stari

--- a/oAutoru.html
+++ b/oAutoru.html
@@ -51,8 +51,10 @@
 	<h2>Komunikacione tehnologije</h2>
 	<p>Zdravo, moje ime je Vlada. Imam 21. godinu. Rodjen sam u Beogradu. Završio sam Politehniku- "školu za nove tehnologije", smer - "Tehničar za robotiku" 2020. godine. Iste te godine sam upisao Visoku ICT školu. Poprilično sam zainteresovan za dalje učenje Web dizajna i stremim ka tom cilju.</p>
 	<ul>
-		<li><a title="Moj facebook" href="https://www.facebook.com/vlada.palijan"target="_blank"><i class="fa-brands fa-facebook-square"></i></a></li>
-		<li><a title="Moj twitter" href="https://twitter.com/VPalijan"target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
+		<li><a title="Moj Facebook" href="https://www.facebook.com/vlada.palijan"target="_blank"><i class="fa-brands fa-facebook-square"></i></a></li>
+		<li><a title="Moj Tiktok" href="https://tiktok.com/@vladapalijan"target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+		<li><a title="Moj Instagram" href="https://instagram.com/vlada.palijan/"target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+		<li><a title="Moj Twitter" href="https://twitter.com/VladaPalijan"target="_blank"><i class="fa-brands fa-twitter-square"></i></a></li>
 	</ul>
 
 
