Sklonio broj indexa

--- a/oAutoru.html
+++ b/oAutoru.html
@@ -47,7 +47,7 @@
 <div class="box">
 
 	<img src="profilna.png" alt="Profilna slika" class="box-img"/>
-	<h1>VLADA PALIJAN 78/20</h1>
+	<h1>VLADA PALIJAN</h1>
 	<h2>Komunikacione tehnologije</h2>
 	<p>Zdravo, moje ime je Vlada. Imam 21. godinu. Rodjen sam u Beogradu. Završio sam Politehniku- "školu za nove tehnologije", smer - "Tehničar za robotiku" 2020. godine. Iste te godine sam upisao Visoku ICT školu. Poprilično sam zainteresovan za dalje učenje Web dizajna i stremim ka tom cilju.</p>
 	<ul>
